--- a/sic/templates/account/after_signup.html
+++ b/sic/templates/account/after_signup.html
@@ -10,22 +10,25 @@
             display: flex;
             flex-direction: column;
         }
-        fieldset.week {
-            display: grid;
-            grid-template-rows: auto auto;
-            grid-template-columns: repeat(7, max-content);
-            width: max-content;
-            align-self: center;
-        }
-        fieldset.week label {
-            margin: 1rem 2px;
-            writing-mode: sideways-lr;
-        }
         .metadata-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
             gap: 5px;
         }
+
+        div.week {
+            display: grid;
+            grid-template-rows: auto auto;
+            grid-template-columns: repeat(7, max-content);
+            column-gap: 1.5rem;
+            justify-content: center;
+            padding: .5rem 2rem;
+        }
+        div.week label {
+            margin: 0rem 0 1rem 0;
+            writing-mode: sideways-lr;
+        }
+
     </style>
 {% endblock %}
 {% block content %}
@@ -110,22 +113,24 @@
                     {{ digest_form.all_stories }}
                 </div>
             </div>
-            <fieldset class="week">
+            <fieldset>
                 <legend>schedule</legend>
-                <label for="id_on_monday">Mon</label>
-                <label for="id_on_tuesday">Tue</label>
-                <label for="id_on_wednesday">Wed</label>
-                <label for="id_on_thursday">Thu</label>
-                <label for="id_on_friday">Fri</label>
-                <label for="id_on_saturday">Sat</label>
-                <label for="id_on_sunday">Sun</label>
-                {{ digest_form.on_monday }}
-                {{ digest_form.on_tuesday }}
-                {{ digest_form.on_wednesday }}
-                {{ digest_form.on_thursday }}
-                {{ digest_form.on_friday }}
-                {{ digest_form.on_saturday }}
-                {{ digest_form.on_sunday }}
+                <div class="week">
+                    <label for="id_on_monday">Mon</label>
+                    <label for="id_on_tuesday">Tue</label>
+                    <label for="id_on_wednesday">Wed</label>
+                    <label for="id_on_thursday">Thu</label>
+                    <label for="id_on_friday">Fri</label>
+                    <label for="id_on_saturday">Sat</label>
+                    <label for="id_on_sunday">Sun</label>
+                    {{ digest_form.on_monday }}
+                    {{ digest_form.on_tuesday }}
+                    {{ digest_form.on_wednesday }}
+                    {{ digest_form.on_thursday }}
+                    {{ digest_form.on_friday }}
+                    {{ digest_form.on_saturday }}
+                    {{ digest_form.on_sunday }}
+                </div>
             </fieldset>
         </fieldset>
         <div class="button-flex-box">
