--- a/sic/templates/account/signup.html
+++ b/sic/templates/account/signup.html
@@ -1,14 +1,27 @@
 {% extends "base.html" %}
 {% block title %}Sign-up - {{ config.verbose_name }}{% endblock %}
 {% block content %}
-    <form method="post" >
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td></td>
-                <td><input type="submit" name="submit" value="Register" /></td>
-            </tr>
-        </table>
-    </form>
+    <p class="help-text">Your email address must be validated in order to activate your account.</p>
+    {% if not inv and config.REQUIRE_VOUCH_FOR_PARTICIPATION %}
+        <p class="help-text">To post comments and stories, ask an existing vouched member to vouch for you.</p>
+    {% endif %}
+    {% if inv or config.ALLOW_REGISTRATIONS %}
+        <form method="POST" class="submit-story-form">
+            {% csrf_token %}
+            {% for field in form.hidden_fields %}
+                {{ field }}
+            {% endfor %}
+            {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.label_tag }}
+                {% if field.help_text %}
+                    <p class="help-text">{{ field.help_text }}</p>
+                {% endif %}
+                {{ field }}
+            {% endfor %}
+            <div class="button-flex-box">
+                <input type="submit" name="submit" value="Register" />
+            </div>
+        </form>
+    {% endif %}
 {% endblock %}
