--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -95,7 +95,7 @@
                         <li><a href="{% url 'personal_aggregations' %}" id="aggregations_link">Aggregations</a></li>
                         <li><a href="{% url 'browse_tags' %}" id="browse_tags_link">Tags</a></li>
                         <li><a href="{% url 'search' %}" id="search_link">Search</a></li>
-                        {% if request.user.is_authenticated %}
+                        {% if request.user.is_authenticated and request.user.can_participate %}
                             <li><a href="{% url 'account' %}#generate-invite" id="generate_invite_link">Invite user</a></li>
                         {% endif %}
                         {{ header_links }}
@@ -110,8 +110,10 @@
                                     <li class="notification"><a href="{% url 'notifications' %}">{{ notifications|length }} notification{{ notifications|pluralize }}</a></li>
                                 {% endif %}
                             {% endwith %}
-                            <li><a href="{% url 'account_activity' %}" id="activity_link">Activity</a></li>
-                            <li><a href="{% url 'submit' %}" id="submit_link">Post</a></li>
+                            {% if request.user.can_participate %}
+                                <li><a href="{% url 'account_activity' %}" id="activity_link">Activity</a></li>
+                                <li><a href="{% url 'submit' %}" id="submit_link">Post</a></li>
+                            {% endif %}
                             <li><a href="{% url 'logout' %}" id="logout_link">Logout</a></li>
                         </ul>
                     </nav>
