--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -381,6 +381,7 @@ template {
   --build-color: #2f4f4f;
   --tag-border-color: #0000005e;
   --pre-bg-color: #e9e9e9;
+  --targetbg-color: #ffffa1;
 }
 
 
@@ -1097,7 +1098,7 @@ ul.posts li.comment + li {
 }
 
 li.comment:target>div.comment {
-  background: #ffffa1;
+  background: var(--targetbg-color);
 }
 
 li.comment li.comment {
@@ -1772,6 +1773,7 @@ nav.pagination {
     --build-color: white;
     --tag-border-color: #000;
     --pre-bg-color: #171717;
+    --targetbg-color: #4c4c01;
   }
   a.title,
   a.title:visited {
