--- a/sic/templates/posts/story.html
+++ b/sic/templates/posts/story.html
@@ -8,6 +8,11 @@
     {% get_comment_preview request 'null' as preview  %}
     {% story_is_bookmarked request.user story as is_bookmarked %}
     {% story_is_upvoted  as is_upvoted %}
+    {% if not story.active %}
+        <ul class="messagelist">
+            <li class="warning">The story has been set inactive. {% if story.last_log_entry %}Reason given: {{ story.last_log_entry }}{% else %}No reason given{% endif %}.</li>
+        </ul>
+    {% endif %}
     <article class="story">
         <header>
             <div class="votes">
