--- a/sic/templates/posts/comment.html
+++ b/sic/templates/posts/comment.html
@@ -22,7 +22,7 @@
         {%else %}
             <input class="comment" type="checkbox" id="comment-{{comment.pk}}" name="comment-{{comment.pk}}" >
             <label role="button" aria-label="toggle comment visibility" tabindex="0" class="comment" for="comment-{{comment.pk}}"></label>
-            <div class="links"><div class="votes">
+            <div class="links">{% if config.ENABLE_KARMA %}<div class="votes">
                 <div class="upvote{% if is_upvoted %} upvoted{% endif %}">
                     {% if request.user.is_authenticated %}
                         <form action="{% url_with_next 'upvote_comment' comment.story.pk comment.story.slugify comment.pk request %}" method="POST">
@@ -32,9 +32,11 @@
                     {% endif %}
                 </div>
                 <span class="score">
-                    {% comment %}&#32;{{comment.karma}}{% endcomment %}
+                    {% if config.VISIBLE_KARMA %}
+                        &#32;{{comment.karma}}
+                    {% endif %}
                 </span>
-            </div> <a href="{{ comment.user.get_absolute_url }}" class="user_link{% if comment.user.is_banned %} banned-user{% elif comment.user.is_new_user %} new-user{% endif %}">{{ comment.user }}</a>
+            </div>{% endif %} <a href="{{ comment.user.get_absolute_url }}" class="user_link{% if comment.user.is_banned %} banned-user{% elif comment.user.is_new_user %} new-user{% endif %}">{{ comment.user }}</a>
                 <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}+0000" title="{{ comment.created }} UTC+00:00">{{ comment.created|naturaltime }}</time>
                 {% if comment.last_log_entry %}
                     <time datetime="{{ comment.last_log_entry.action_time | date:"Y-m-d H:i:s" }}+0000" title="{{ comment.last_log_entry.action_time }} UTC+00:00">- Edited {{ comment.last_log_entry.action_time|naturaltime }}</time>
