--- a/sic/templates/posts/story_list_item.html
+++ b/sic/templates/posts/story_list_item.html
@@ -4,19 +4,23 @@
     {% spaceless %}
         {% story_is_bookmarked request.user story as is_bookmarked %}
         {% story_is_upvoted as is_upvoted %}
-        <div class="votes">
-            <div class="upvote{% if is_upvoted %} upvoted{% endif %}">
-                {% if request.user.is_authenticated %}
-                    <form method="POST" action="{% url_with_next 'upvote_story' story.pk request %}">
-                        {% csrf_token %}
-                        <input type="submit" title="Upvote story ''{{ story.title }}'" aria-label="Upvote story ''{{ story.title }}'" value="">
-                    </form>
-                {% endif %}
+        {% if config.ENABLE_KARMA %}
+            <div class="votes">
+                <div class="upvote{% if is_upvoted %} upvoted{% endif %}">
+                    {% if request.user.is_authenticated %}
+                        <form method="POST" action="{% url_with_next 'upvote_story' story.pk request %}">
+                            {% csrf_token %}
+                            <input type="submit" title="Upvote story ''{{ story.title }}'" aria-label="Upvote story ''{{ story.title }}'" value="">
+                        </form>
+                    {% endif %}
+                </div>
+                <div class="score">
+                    {% if config.VISIBLE_KARMA %}
+                        &#32;{{story.karma}}
+                    {% endif %}
+                </div>
             </div>
-            <div class="score">
-                {% comment %}&#32;{{story.karma}}{% endcomment %}
-            </div>
-        </div>
+        {% endif %}
         <div class="title{% if story.content_warning %} content-warning{% endif %}">
             {% if story.content_warning %}
                 <label for="content-warning-{{ story.pk }}">{{ story.content_warning }}</label>&#32;
